--- a/patbati/local_settings.py.sample
+++ b/patbati/local_settings.py.sample
@@ -16,4 +16,7 @@ DATABASES['authent'] = {
 }
 
 #AUTHENT_DEFAULT_USER_GROUP_NAME = "test"
-LOCAL_SRID = 2154
+ZONING_CONFIG = {
+    "LOCAL_SRID":  2154,
+    "AREA_TYPE_LIMITED" : []
+}
