remove setting_local

--- a/patbati/settings_local.py.sample
+++ b/patbati/settings_local.py.sample
@@ -18,5 +18,7 @@ DATABASES['authent'] = {
 #AUTHENT_DEFAULT_USER_GROUP_NAME = "test"
 ZONING_CONFIG = {
     "LOCAL_SRID":  2154,
-    "AREA_TYPE_LIMITED" : []
+    "AREA_TYPE_LIMITED": [],
+    "ADMINISTRATIVE_AREAS": ["COM", "SEC"],
+    "REGULATORY_AREAS": ["ZC", "RNN", "RNR", "ZPS", "SIC", "SITE_CLASSES", "SITE_INSC", "PPN", "ZNIEFF2", "ZNIEFF1" ],
 }
