--- a/patbati/settings_local.py.sample
+++ b/patbati/settings_local.py.sample
@@ -33,3 +33,9 @@ ZONING_CONFIG = {
     "ADMINISTRATIVE_AREAS": ["COM", "SEC"],
     "REGULATORY_AREAS": ["ZC", "RNN", "RNR", "ZPS", "SIC", "SITE_CLASSES", "SITE_INSC", "PPN", "ZNIEFF2", "ZNIEFF1" ],
 }
+
+SSO_LOGGIN_ENABLED = False
+
+SSO_CLIENT_SECRET="YOUR CLIENT SECRET"
+SSO_CLIENT_ID="YOUR CLIENT ID"
+SSO_ENDPOINT="YOUR REDIRECT URI"
