--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
         
       - name: Install dependencies
         run: |
-          sudo apt install -y libjpeg62 zlib1g-dev libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev 
+          sudo apt install -y libjpeg62 zlib1g-dev libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev libgdal-dev
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
