--- a/patbati/settings_local.py.sample
+++ b/patbati/settings_local.py.sample
@@ -51,4 +51,4 @@ SSO_LOGIN_ENABLED = False
 # Infos SSO
 SSO_CLIENT_SECRET = "YOUR CLIENT SECRET"
 SSO_CLIENT_ID = "YOUR CLIENT ID"
-SSO_ENDPOINT = "YOUR
+SSO_ENDPOINT = "YOUR"
