--- a/requirements.txt
+++ b/requirements.txt
@@ -203,6 +203,6 @@ zope-proxy==6.1
     # via zope-deferredimport
 zopfli==0.2.3.post1
     # via fonttools
-
+factory
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
