--- a/requirements.txt
+++ b/requirements.txt
@@ -111,6 +111,10 @@ easy-thumbnails==2.10
     # via
     #   mapentity
     #   paperclip
+factory-boy==3.3.3
+    # via -r requirements.in
+faker==37.5.3
+    # via factory-boy
 fiona==1.10.1
     # via mapentity
 fonttools[woff]==4.59.0
@@ -171,7 +175,9 @@ transaction==5.0
 typing-extensions==4.14.1
     # via beautifulsoup4
 tzdata==2025.2
-    # via mapentity
+    # via
+    #   faker
+    #   mapentity
 urllib3==2.5.0
     # via requests
 weasyprint==66.0
