--- a/patbati/settings_local.py.sample
+++ b/patbati/settings_local.py.sample
@@ -49,6 +49,10 @@ ZONING_CONFIG = {
 SSO_LOGIN_ENABLED = False
 
 # Infos SSO
-SSO_CLIENT_SECRET = "YOUR CLIENT SECRET"
-SSO_CLIENT_ID = "YOUR CLIENT ID"
-SSO_ENDPOINT = "YOUR"
+AUTHLIB_OAUTH_CLIENTS = {
+    'keycloak': {
+        'client_id': "<MY_CLIENT_ID>",
+        'client_secret': "<MY_CLIENT_SECRET>",
+    }
+}
+SSO_ENDPOINT = "https://<URL_KEYCLOAK>/realms/<NOM DU REALM>/.well-known/openid-configuration"
