--- a/patbati/settings_local.py.sample
+++ b/patbati/settings_local.py.sample
@@ -56,3 +56,5 @@ AUTHLIB_OAUTH_CLIENTS = {
     }
 }
 SSO_ENDPOINT = "https://<URL_KEYCLOAK>/realms/<NOM DU REALM>/.well-known/openid-configuration"
+# Nom du group par defaut dans lequel l'utilisateur sera mis. Obligatoire si `SSO_LOGIN_ENABLED = True`
+SSO_DEFAULT_GROUP = "default_group"
