--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     services:
       postgres:
@@ -42,6 +42,7 @@ jobs:
         
       - name: Install dependencies
         run: |
+          sudo apt-get -qq update
           sudo apt install -y libjpeg62 zlib1g-dev libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev libgdal-dev
           python -m pip install --upgrade pip
           pip install -r requirements.txt
