--- a/patbati/settings_local.py.sample
+++ b/patbati/settings_local.py.sample
@@ -58,3 +58,8 @@ AUTHLIB_OAUTH_CLIENTS = {
 SSO_ENDPOINT = "https://<URL_KEYCLOAK>/realms/<NOM DU REALM>/.well-known/openid-configuration"
 # Nom du group par defaut dans lequel l'utilisateur sera mis. Obligatoire si `SSO_LOGIN_ENABLED = True`
 SSO_DEFAULT_GROUP = "default_group"
+
+
+# behind proxy HTTPS
+#USE_X_FORWARDED_HOST = True
+#SECURE_PROXY_SSL_HEADER = ('HTTP_X_FORWARDED_PROTO', 'https')
